# EnglishWordsFlashCard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  db.cpp  db.h  main.cpp  main.qml
